# SpotPi

./: Dockerfile  LICENSE  README.md  docker-entrypoint.sh  pyproject.toml
.github/workflows/: docker-release.yml
config/: default_config.toml
docs/: ARCHITECTURE.md  CONFIGURATION.md  OPERATIONS.md  TROUBLESHOOTING.md
scripts/: doctor.sh  install.sh  uninstall.sh
src/pi_connect_speaker/: http_server.py  librespot.py
src/pi_connect_speaker/static/: index.html
src/pi_connect_speaker/static/assets/: app.js
src/spotpi/: __init__.py  cli.py  config.py  defaults.py  http_server.py  system.py
src/spotpi/static/: index.html  test_do_not_use.html
src/spotpi/static/assets/: app.css  app.js  chrome.js  test.css
sudoers/: spotpi
systemd/: spotpi-librespot.service  spotpi.service
tests/: test_config.py  test_librespot.py  test_system.py
