[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spotpi"
version = "0.1.0"
description = "A stable Raspberry Pi Spotify Connect speaker with a local settings UI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SpotPi contributors" }]
keywords = ["raspberry-pi", "spotify-connect", "librespot", "alsa", "audio"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Sound/Audio",
]
dependencies = []

[project.scripts]
spotpi = "spotpi.http_server:main"
spotpi-librespot = "spotpi.librespot:main"
spotpi-librespot-preview = "spotpi.librespot:preview"
spotpi-cli = "spotpi.cli:main"
spotpi-doctor = "spotpi.cli:doctor_main"
spotpi-init-config = "spotpi.cli:init_config_main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spotpi = ["static/*.html", "static/assets/*.css", "static/assets/*.js"]
